# Microcontroller

./: CMakeLists.txt
main/: CMakeLists.txt  device.c  host.c  init.c  init.h  main.c
